--- a/style.css
+++ b/style.css
@@ -124,13 +124,12 @@ th {
 }
 
 footer {
-   
     color: white;
     text-align: center;
-    padding: 15px 0;
     position: absolute;
-    margin:auto;
-    margin-top: 700px;
+    padding: 15px 0;
+    margin-top: 680px;
+    width: 100%;
 }
 
 footer p {
@@ -139,11 +138,16 @@ footer p {
 
 footer a {
     color: white;
-    text-align: center;
     text-decoration: none;
     margin: 0 5px;
 }
 
 footer a:hover {
     text-decoration: underline;
+}
+
+@media (max-width: 1203px) {
+    footer {
+        margin-top: 580px;
+    }
 }
